Adding cloud image

--- a/php/index.html
+++ b/php/index.html
@@ -110,6 +110,11 @@ div.color { color:white; }
         background:url(images/openshift.png) center no-repeat fixed;
         background-size: cover;
       }
+
+      .cloud .reveal .state-background {
+        background:url(images/cloud.jpg) center no-repeat fixed;
+        background-size: cover;
+      }
     </style>
 
   </head>
@@ -161,8 +166,8 @@ div.color { color:white; }
           <h2 class="middle">Open Source</h2>
         </section>
 
-        <section>
-          <h2 class="middle">Cloud</h2>
+        <section data-state="cloud">
+          <h2 class="middle invert">Cloud</h2>
         </section>
 
         <section>
@@ -210,6 +215,7 @@ div.color { color:white; }
             <p>David and Goliath - http://bit.ly/17zU6N7</p>
             <p>Pistol - http://bit.ly/1bO6VAp</p>
             <p>Old Books - http://bit.ly/17EPKSN</p>
+            <p>Cloud - http://bit.ly/1hIkgPE</p>
           </div>
         </section>
       </div>
