Adding innovation image

--- a/php/index.html
+++ b/php/index.html
@@ -115,6 +115,12 @@ div.color { color:white; }
         background:url(images/cloud.jpg) center no-repeat fixed;
         background-size: cover;
       }
+
+      .innovation .reveal .state-background {
+        background:url(images/lightbulb.jpg) center no-repeat fixed;
+        background-size: contain;
+        opacity: 0.5;
+      }
     </style>
 
   </head>
@@ -170,8 +176,8 @@ div.color { color:white; }
           <h2 class="middle invert">Cloud</h2>
         </section>
 
-        <section>
-          <h2 class="middle">Innovation</h2>
+        <section data-state="innovation">
+          <h2 class="middle">Innovation</h2><sup>redefined</sup>
         </section>
 
         <section data-state="david">
@@ -216,6 +222,7 @@ div.color { color:white; }
             <p>Pistol - http://bit.ly/1bO6VAp</p>
             <p>Old Books - http://bit.ly/17EPKSN</p>
             <p>Cloud - http://bit.ly/1hIkgPE</p>
+            <p>Light Bulb - http://bit.ly/1anLkMC</p>
           </div>
         </section>
       </div>
