Adding competition picture

--- a/php/index.html
+++ b/php/index.html
@@ -121,6 +121,12 @@ div.color { color:white; }
         background-size: contain;
         opacity: 0.5;
       }
+
+      .compete .reveal .state-background {
+        background:url(images/podium.jpg) center no-repeat fixed;
+        background-size: cover;
+        opacity: 0.8;
+      }
     </style>
 
   </head>
@@ -160,8 +166,8 @@ div.color { color:white; }
         <section data-state="time">
         </section>
 
-        <section>
-          <h2 class="middle2">But how do you compete?</h2>
+        <section data-state="compete">
+          <h3 class="middle invert">But how do you compete?</h3>
         </section>
 
         <section>
@@ -223,6 +229,7 @@ div.color { color:white; }
             <p>Old Books - http://bit.ly/17EPKSN</p>
             <p>Cloud - http://bit.ly/1hIkgPE</p>
             <p>Light Bulb - http://bit.ly/1anLkMC</p>
+            <p>Podium - http://bit.ly/1iIf4J6</p>
           </div>
         </section>
       </div>
