Improving OpenShift logo

--- a/php/index.html
+++ b/php/index.html
@@ -107,8 +107,8 @@ div.color { color:white; }
       }
 
       .openshift .reveal .state-background {
-        background:url(images/openshift.png) center no-repeat fixed;
-        background-size: cover;
+        background:url(images/OpenShift_Logo.png) center no-repeat fixed;
+        background-size: contain;
       }
 
       .cloud .reveal .state-background {
