Adding open source image

--- a/php/index.html
+++ b/php/index.html
@@ -127,6 +127,12 @@ div.color { color:white; }
         background-size: cover;
         opacity: 0.8;
       }
+
+      .opensource .reveal .state-background {
+        background:url(images/opensource.jpg) center no-repeat fixed;
+        background-size: cover;
+        opacity: 0.8;
+      }
     </style>
 
   </head>
@@ -174,8 +180,7 @@ div.color { color:white; }
           <h2 class="middle2">The world of software is changing</h2>
         </section>
 
-        <section>
-          <h2 class="middle">Open Source</h2>
+        <section data-state="opensource">
         </section>
 
         <section data-state="cloud">
@@ -230,6 +235,7 @@ div.color { color:white; }
             <p>Cloud - http://bit.ly/1hIkgPE</p>
             <p>Light Bulb - http://bit.ly/1anLkMC</p>
             <p>Podium - http://bit.ly/1iIf4J6</p>
+            <p>Open Source - http://bit.ly/1857a7J</p>
           </div>
         </section>
       </div>
